Grace/tests/gibbs/errors/t114.grace
// ERROR = P1016
object {
    var name
   var name2
}
